infrastructure/netpols/ingress/ingress-world.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-world
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/ingress-world: "true"
  ingress:
    - fromEntities:
      - world
